httpd-mesh-secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-mesh-secure
  name: httpd-mesh-secure
  namespace: httpd-mesh
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: httpd-mesh-app
  sessionAffinity: None
  type: ClusterIP
