httpd-mesh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-mesh
  name: httpd-mesh
  namespace: httpd-mesh
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpd-mesh-app
  sessionAffinity: None
  type: ClusterIP
