httpd-mesh-secure-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpd-mesh-secure-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "httpd-mesh-secure.apps.ocp4.local.bytewise.my"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-mesh-secure
spec:
  hosts:
  - "httpd-mesh-secure.apps.ocp4.local.bytewise.my"
  gateways:
  - httpd-mesh-secure-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: httpd-mesh
        port:
          number: 8080
